# parking-lot

./: .coveragerc  .env.example  README.md  coverage.txt  pyproject.toml  report.txt  requirements.txt  test_api.py
accounts/: serializers.py  test_views.py  urls.py  views.py
levels/: models.py  permissions.py  serializers.py  test_views.py  urls.py  views.py
levels/migrations/: 0001_initial.py
parking_lot/: settings.py  urls.py
pricings/: models.py  serializers.py  services.py  test_views.py  urls.py  views.py
pricings/migrations/: 0001_initial.py
vehicles/: models.py  serializers.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py
